# ngxtop

./: .gitignore  README.md  README.rst  pyproject.toml
.kiro/steering/: coding-standards.md  project.md  testing.md
docs/: cli.md
ngxtop/: config_parser.py  ngxtop.py
tests/: test_caddy_integration.py  test_config_parser.py  test_debug_json_parsing.py  test_json_extraction_fix.py  test_json_format.py  test_log_rotation.py  test_parse_log.py  test_query_command.py
